opam-version: "2.0"
name:         "contruno-bin"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/contruno"
bug-reports:  "https://github.com/dinosaure/contruno/issues"
dev-repo:     "git+https://github.com/dinosaure/contruno.git"
doc:          "https://dinosaure.github.io/contruno/"
license:      "MIT"
synopsis:     "Reverse TLS proxy"
description: """A simple tool to populate the contruno database"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "dune"             {>= "2.9.0"}
  "git-kv"
  "mirage-clock-unix"
  "contruno"         {= version}
]
