opam-version: "2.0"
name:         "contruno"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/contruno"
bug-reports:  "https://github.com/dinosaure/contruno/issues"
dev-repo:     "git+https://github.com/dinosaure/contruno.git"
doc:          "https://dinosaure.github.io/contruno/"
license:      "MIT"
synopsis:     "Reverse TLS proxy"
description: """An unikernel as a reverse TLS proxy service"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "dune"             {>= "2.9.0"}
  "art"
  "ca-certs-nss"
  "dns-client"
  "ipaddr"
  "tcpip"
  "mirage-clock"
  "mirage-random"
  "mirage-stack"
  "mirage-time"
  "data-encoding"
  "paf"              {>= "0.2.0"}
  "paf-le"           {>= "0.2.0"}
  "x509"
]
pin-depends: [
  [ "paf.dev" "git+https://github.com/dinosaure/paf-le-chien.git#100a9748369f2d8f24f8533b62e546d6cfa6ee9e" ]
  [ "paf-le.dev" "git+https://github.com/dinosaure/paf-le-chien.git#100a9748369f2d8f24f8533b62e546d6cfa6ee9e" ]
  [ "carton.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "carton-git.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "carton-lwt.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "git.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "git-paf.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "git-unix.dev" "git+https://github.com/mirage/ocaml-git.git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "git-mirage.dev" "git+https://github.com/mirage/ocaml-git#4f00636cb5f5ed7793dca8739354235da3d5428f" ]
  [ "git-kv.dev" "git+https://git.robur.io/robur/git-kv.git#7323b8f065846f85e6733d07f7860d50388a65bb" ]
]
