opam-version: "2.0"
name:         "contruno"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/contruno"
bug-reports:  "https://github.com/dinosaure/contruno/issues"
dev-repo:     "git+https://github.com/dinosaure/contruno.git"
doc:          "https://dinosaure.github.io/contruno/"
license:      "MIT"
synopsis:     "Reverse TLS proxy"
description: """An unikernel as a reverse TLS proxy service"""

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "dune"               {>= "2.9.0"}
  "art"
  "ca-certs-nss"
  "dns-client-mirage"
  "ipaddr"
  "tcpip"
  "mirage-clock"
  "mirage-random"
  "mirage-time"
  "data-encoding"
  "tls"                {>= "0.17.0"}
  "git-kv"             {>= "0.0.3"}
  "paf"                {>= "0.5.0"}
  "letsencrypt-mirage" {>= "0.3.0"}
  "x509"               {>= "1.0.4"}
]
