(library
 (name certif)
 (public_name contruno.certif)
 (modules certif)
 (libraries
  rresult
  ca-certs-nss
  dns-client.mirage
  paf.mirage
  paf-le
  tcpip
  mirage-clock
  mirage-time
  mirage-random))

(library
 (name value)
 (public_name contruno.value)
 (modules value)
 (libraries rresult irmin ipaddr x509))

(library
 (name contruno)
 (public_name contruno)
 (modules contruno)
 (libraries certif value irmin-mirage-git art ipaddr x509 irmin))
