(library
 (name certif)
 (public_name contruno.certif)
 (modules certif)
 (libraries
  rresult
  ca-certs-nss
  dns-client.mirage
  contruno.value
  paf.mirage
  paf-le
  tcpip
  mirage-clock
  mirage-time
  mirage-random))

(library
 (name value)
 (public_name contruno.value)
 (modules value)
 (libraries tls rresult data-encoding ipaddr x509))

(library
 (name contruno)
 (public_name contruno)
 (modules contruno)
 (libraries
  contruno.certif
  contruno.value
  git-kv
  data-encoding
  art
  ipaddr
  x509
  irmin))
